--- a/VSC_2B/css/2bstylesheet.css
+++ b/VSC_2B/css/2bstylesheet.css
@@ -279,7 +279,7 @@ ul li a i {
   padding: 5px;
   border-radius: 5px;
   font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .custom-cursor1:hover::after {
@@ -292,7 +292,7 @@ ul li a i {
   padding: 5px;
   border-radius: 5px;
   font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .custom-cursor2:hover::after {
@@ -305,7 +305,7 @@ ul li a i {
   padding: 5px;
   border-radius: 5px;
   font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .custom-cursor3:hover::after {
@@ -318,7 +318,7 @@ ul li a i {
   padding: 5px;
   border-radius: 5px;
   font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .custom-cursor4:hover::after {
@@ -331,5 +331,5 @@ ul li a i {
   padding: 5px;
   border-radius: 5px;
   font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
+ font-family: 'Courier New', Courier, monospace;
 }
